2017-05-24  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Fix snprintf()/vsnprintf() -Wformat vs. multiple definition issue.

	* include/stdio.h (__mingw_stdio_redirect__): Add reference to...
	(__Wformat): ...this new macro; define it, such that it expands via...
	(__Wformat_mingw_printf, __Wformat_msvcrt_printf): ...these new macros,
	ultimately expanding to an attribute declaration, in terms of...
	(__Wformat_ms_vprintf, __Wformat_ms_vfprintf, __Wformat_ms_vsprintf)
	(__Wformat_ms_printf, __Wformat_ms_fprintf, __Wformat_ms_sprintf):
	...any one of these; they map to an ms_printf attribute, or...
	(__Wformat_vprintf, __Wformat_vfprintf, __Wformat_vsprintf)
	(__Wformat_printf, __Wformat_fprintf, __Wformat_sprintf): ...any one
	of these; they map conditionally to...
	[__GNUC__>=6] (__mingw_printf__): ...this new format attribute, or...
	[__GNUC__< 6]: ...nothing.
	(snprintf, vsnprintf): Revert 2017-01-30 inline definitions; add...
	(__Wformat_snprintf, __Wformat_vsnprintf): ...these attributes; they
	are also mapped conditionally, in this case to...
	[__GNUC__>=6] (__mingw_printf__): ...this, or...
	[__GNUC__< 6] (__gnu_printf__): ...this.

2017-03-14  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Refactor mingwrt and w32api common makefile content.

	* Makefile.in (mingwrt-srcdist-config-files): Rename it...
	(mingwrt-srcdist-common-files): ...as this phoney build rule.
	(shared_include_file): New macro; define it, and include named file.
	(configure, config.status, Makefile, config.status.missing, _mingw.h)
	(w32api.h, PACKAGE_VERSION_SCRIPT, PACKAGE_VERSION_FORMAT): Factor
	out; relocate them to new file in common parent directory...
	* ../Makefile.comm: ...here.

2017-03-09  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Fix generated header file dependencies.

	* Makefile.in (_mingw.h, w32api): Make them depend on changes in...
	[VERSION.m4]: ...this; package version changes are no longer made...